bin/tests/snapshots/enable_blank_line__0e854345520fcdf60928e8b487bfe2e6_fix.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  enable = true;
  enableCompletion = true;
  cdpath = "a";
}
---
