bin/tests/snapshots/enable_blank_line__0e854345520fcdf60928e8b487bfe2e6_lint_json.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  enable = true;
  enableCompletion = true;
  cdpath = "a";
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "enable_blank_line",
      "note": "No blank line after `enable`",
      "code": 32,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 27
            }
          },
          "message": "a blank line should separate this from what follows",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 5,
                "column": 2
              }
            },
            "fix": "{\n  enable = true;\n  enableCompletion = true;\n\n  cdpath = \"a\";\n}"
          }
        }
      ]
    }
  ]
}
