bin/tests/snapshots/enable_blank_line__0e854345520fcdf60928e8b487bfe2e6_lint_stderr.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  enable = true;
  enableCompletion = true;
  cdpath = "a";
}
---
[enable_blank_line] Warning: No blank line after `enable`
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   enableCompletion = true;
   │   ────────────┬───────────  
   │               ╰───────────── a blank line should separate this from what follows
───╯
