bin/tests/snapshots/enable_blank_line__2722799e0da72cee4a336157ab5a9500_fix.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  nssmdns4 = true;
  enable = true;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,5 @@
 {
-  nssmdns4 = true;
   enable = true;
+
+  nssmdns4 = true;
 }
