bin/tests/snapshots/enable_blank_line__2722799e0da72cee4a336157ab5a9500_lint_errfmt.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  nssmdns4 = true;
  enable = true;
}
---
<temp_file_path>>3:3:W:30:[enable_first] `enable` should be the first attribute in this set
