bin/tests/snapshots/enable_blank_line__2722799e0da72cee4a336157ab5a9500_lint_json.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  nssmdns4 = true;
  enable = true;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "enable_first",
      "note": "`enable` is not the first attribute",
      "code": 30,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 17
            }
          },
          "message": "`enable` should be the first attribute in this set",
          "suggestion": null
        }
      ]
    }
  ]
}
