bin/tests/snapshots/enable_blank_line__2722799e0da72cee4a336157ab5a9500_lint_stderr.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  nssmdns4 = true;
  enable = true;
}
---
[enable_first] Warning: `enable` is not the first attribute
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   enable = true;
   │   ───────┬──────  
   │          ╰──────── enable should be the first attribute in this set
───╯
