bin/tests/snapshots/enable_blank_line__291019f48c74361ada12038b298b907a_fix.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  enable = true;
  nssmdns4 = true;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,5 @@
 {
   enable = true;
+
   nssmdns4 = true;
 }
