bin/tests/snapshots/enable_blank_line__291019f48c74361ada12038b298b907a_lint_errfmt.snap
---
source: bin/tests/enable_blank_line.rs
assertion_line: 7
---
{
  enable = true;
  nssmdns4 = true;
}
---
<temp_file_path>>2:3:W:32:[enable_blank_line] a blank line should separate this from what follows
